manifests/labs/4-gateway_capabilities/step1-authnz/vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: default
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - '*'
    options:
      cors:
        allowCredentials: true
        allowHeaders:
        - content-type
        allowMethods:
        - POST
        allowOriginRegex:
        - '/*'
    routes:
    - graphqlApiRef:
        name: stitched-gql
        namespace: gloo-system
      matchers:
      - prefix: /graphql
    # After attaching the authconfig, Envoy will enforce the API key.    
      options:
        extauth:
          configRef:
            name: apikey-auth
            namespace: gloo-system      
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: gloo-system-gloo-fed-console-8090
            namespace: gloo-system
